--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:app": "npx ng build",
     "test:lib": "npx ng test ids-enterprise-ng --watch=false",
     "test:app": "npx ng test --watch=false",
+    "test:e2e": "npx start-server-and-test start http-get://localhost:4200/ids-enterprise-ng-demo/ e2e:cy",
     "pack:lib": "cd dist/ids-enterprise-ng && npm pack",
     "package": "npm run build:lib && npm pack",
     "test": "npx ng test ids-enterprise-ng --code-coverage --watch=false",
@@ -19,6 +20,8 @@
     "mdlint:src": "npx markdownlint ./projects/ids-enterprise-ng/src/",
     "mdlint:docs": "npx markdownlint docs/ && npx markdownlint README.md",
     "e2e": "npx ng e2e",
+    "e2e:cy": "npx cypress run",
+    "e2e:cy-debug": "npx cypress open --browser chrome",
     "update-enterprise": "node ./scripts/update-ids-enterprise.js",
     "version-bump:dev": "node ./scripts/version-append-date",
     "release:dev": "npm run update-enterprise && npm run version-bump:dev && node scripts/release-dev.js",
@@ -63,6 +66,7 @@
     "@types/node": "~8.9.4",
     "chalk": "^2.4.1",
     "codelyzer": "^5.0.0",
+    "cypress": "^3.6.0",
     "del": "^2.2.2",
     "htmlhint": "^0.11.0",
     "inquirer": "^6.0.0",
@@ -84,6 +88,7 @@
     "puppeteer": "^1.13.0",
     "release-it": "^10.4.5",
     "slash": "^2.0.0",
+    "start-server-and-test": "^1.10.6",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
