--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "@types/node": "~8.9.4",
     "chalk": "^2.4.1",
     "codelyzer": "^5.0.0",
-    "cypress": "^3.6.0",
+    "cypress": "^3.7.0",
+    "cypress-pipe": "^1.5.0",
     "del": "^2.2.2",
     "htmlhint": "^0.11.0",
     "inquirer": "^6.0.0",
