--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,49 +1,23 @@
-{
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "jasmine",
-      "jquery",
-      "node"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "paths": {
-      "ids-enterprise-ng": [
-        "dist/ids-enterprise-ng"
-      ],
-      "ids-enterprise-ng/*": [
-        "dist/ids-enterprise-ng/*"
-      ]
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
 
-    // For auto code compile use this.
-    // "paths": {
-    //   "ids-enterprise-ng": [
-    //     "projects/ids-enterprise-ng/src/public_api"
-    //   ]
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
+{
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/ids-enterprise-ng/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/ids-enterprise-ng/tsconfig.spec.json"
     }
-  },
-  "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "enableIvy": true
-  },
-  "exclude": [
-    "dist/**"
   ]
 }
